--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "dog-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://ankitaatgit.github.io/dog-app/",
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.16.4",
